src/yini_test/cases/golden/strict/valid/inline-objects/nested-inline-objects.strict.yini
@yini strict

^ Objects
service = {
    name: "api",
    cache: { enabled: true, maxMb: 256 },
    limits: { retryCount: 3, timeoutSec: 30 }
}

/END
