src/yini_test/cases/golden/strict/invalid/inline-objects/value-on-next-line.strict.yini
@yini strict

^ Objects
cache = {
    enabled:
        true
}

/END
